fix board gap and icons

--- a/levels/game-style.css
+++ b/levels/game-style.css
@@ -1,8 +1,19 @@
 #grid td {
   width: 100px;
   height: 100px;
-  border: 1px solid red;
+  border-collapse: collapse;
   background-size: cover;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
+td img { 
+  display:block; 
+  height: 100%;
+}
 
+#grid {
+  border-spacing: 0;
+  
+}
